--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "/Users/hironori.matsumoto/.pyenv/versions/3.8.5/bin/python"
+    "python.pythonPath": "C:\\Users\\kobay\\anaconda3\\python.exe"
 }
